[tool.poetry]
name = "flet-ui-openai"
version = "0.1.0"
description = ""
authors = ["theocheng <zlz_gty@foxmail.com>"]
readme = "README.md"
packages = [{include = "flet_ui_openai"}]

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.6.2"
openai = "^0.27.6"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
